estilo seccion rooms desktop

--- a/index.html
+++ b/index.html
@@ -258,10 +258,151 @@
                             </p>
                         </div>
                     </article>
+                    <article class="swiper-slide room-selection">
+
+                        <ul class="room-selection__characteristics">
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/bed.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/wifi.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/car.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/heater.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/gym.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/smoke-free.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/bar.png" alt="">
+                            </li>
+                        </ul>
+                        <img class="room-selection__image" src="assets/images/placeholder-image.png" alt="">
+                        <div class="room-selection__description">
+                            <div class="room-selection__description__text-container">
+                                <a class="room-selection__description__text-container__name"
+                                    href="room-details.html">Minimal Duplex Room</a>
+                                <p class="room-selection__description__text-container__mini-description">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore.
+                                </p>
+                            </div>
+                            <p class="room-selection__description__price">
+                                $345<span class="room-selection__description__price__per-night">/Night</span>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="swiper-slide room-selection">
+
+                        <ul class="room-selection__characteristics">
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/bed.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/wifi.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/car.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/heater.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/gym.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/smoke-free.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/bar.png" alt="">
+                            </li>
+                        </ul>
+                        <img class="room-selection__image" src="assets/images/placeholder-image.png" alt="">
+                        <div class="room-selection__description">
+                            <div class="room-selection__description__text-container">
+                                <a class="room-selection__description__text-container__name"
+                                    href="room-details.html">Minimal Duplex Room</a>
+                                <p class="room-selection__description__text-container__mini-description">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore.
+                                </p>
+                            </div>
+                            <p class="room-selection__description__price">
+                                $345<span class="room-selection__description__price__per-night">/Night</span>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="swiper-slide room-selection">
+
+                        <ul class="room-selection__characteristics">
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/bed.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/wifi.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/car.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/heater.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/gym.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/smoke-free.png" alt="">
+                            </li>
+                            <li class="room-selection__characteristics__perk">
+                                <img class="room-selection__characteristics__perk__icon"
+                                    src="assets/icons/room-icons-black/bar.png" alt="">
+                            </li>
+                        </ul>
+                        <img class="room-selection__image" src="assets/images/placeholder-image.png" alt="">
+                        <div class="room-selection__description">
+                            <div class="room-selection__description__text-container">
+                                <a class="room-selection__description__text-container__name"
+                                    href="room-details.html">Minimal Duplex Room</a>
+                                <p class="room-selection__description__text-container__mini-description">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore.
+                                </p>
+                            </div>
+                            <p class="room-selection__description__price">
+                                $345<span class="room-selection__description__price__per-night">/Night</span>
+                            </p>
+                        </div>
+                    </article>
                 </div>
 
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev">&lt;</div>
+                <div class="swiper-button-next">&gt;</div>
             </div>
         </section>
 
