estilos seccion video-presentation desktop

--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
             <form class="front__availability" action="" method="get">
                 <div class="front__availability__field">
                     <label class="front__availability__field__label" for="arrival-date">Arrival Date</label>
-                    <input class="front__availability__field__date-input" type="date" name="arrival-date" id="arrival-date">
+                    <input class="front__availability__field__date-input" type="date" name="arrival-date"
+                        id="arrival-date">
                 </div>
                 <div class="front__availability__field">
                     <label class="front__availability__field__label" for="departure-date">Departure Date</label>
-                    <input class="front__availability__field__date-input" type="date" name="departure-date" id="departure-date">
+                    <input class="front__availability__field__date-input" type="date" name="departure-date"
+                        id="departure-date">
                 </div>
                 <input class="front__availability__submit" type="submit" value="Check availability">
             </form>
@@ -407,17 +409,25 @@
         </section>
 
         <section class="video-presentation-container">
-            <h4 class="video-presentation-container__subtitle">Intro video</h4>
-            <h2 class="video-presentation-container__title">Meet With Our Luxury Place.</h2>
-            <p class="video-presentation-container__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat you have to understand this.</p>
-            <iframe class="video-presentation-container__video" width="560" height="315"
-                src="https://www.youtube.com/embed/Bu3Doe45lcU?si=C1JsdFb_5tVdT1w0&amp;start=25&end=75"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="video-presentation-container__info">
+
+                <div class="video-presentation-container__info__text">
+                    <h4 class="subtitle">Intro video</h4>
+                    <h2 class="title">Meet With Our Luxury Place.</h2>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                        do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat you have to understand this.
+                    </p>
+                </div>
+
+                <iframe class="video-presentation-container__info__video" width="560" height="315"
+                    src="https://www.youtube.com/embed/Bu3Doe45lcU?si=C1JsdFb_5tVdT1w0&amp;start=25&end=75"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
             <a class="video-presentation-container__learn-more" href="about.html">Learn More</a>
         </section>
 
@@ -653,19 +663,25 @@
                     nisi.</p>
                 <div class="footer__top-container__hotel__socials">
                     <a href="#" class="footer__top-container__hotel__socials__link">
-                        <img class="footer__top-container__hotel__socials__link__icon" src="assets/icons/footer/facebook.png" alt="Facebook">
+                        <img class="footer__top-container__hotel__socials__link__icon"
+                            src="assets/icons/footer/facebook.png" alt="Facebook">
                     </a>
-                    <a href="#" class="footer__top-container__hotel__socials__link footer__top-container__hotel__socials__link--active">
-                        <img class="footer__top-container__hotel__socials__link__icon" src="assets/icons/footer/twitter.png" alt="Twitter">
-                    </a>
-                    <a href="#" class="footer__top-container__hotel__socials__link">
-                        <img class="footer__top-container__hotel__socials__link__icon" src="assets/icons/footer/behance.png" alt="Behance">
-                    </a>
-                    <a href="#" class="footer__top-container__hotel__socials__link">
-                        <img class="footer__top-container__hotel__socials__link__icon" src="assets/icons/footer/linkedin.png" alt="Linkedin">
+                    <a href="#"
+                        class="footer__top-container__hotel__socials__link footer__top-container__hotel__socials__link--active">
+                        <img class="footer__top-container__hotel__socials__link__icon"
+                            src="assets/icons/footer/twitter.png" alt="Twitter">
                     </a>
                     <a href="#" class="footer__top-container__hotel__socials__link">
-                        <img class="footer__top-container__hotel__socials__link__icon" src="assets/icons/footer/youtube.png" alt="Youtube">
+                        <img class="footer__top-container__hotel__socials__link__icon"
+                            src="assets/icons/footer/behance.png" alt="Behance">
+                    </a>
+                    <a href="#" class="footer__top-container__hotel__socials__link">
+                        <img class="footer__top-container__hotel__socials__link__icon"
+                            src="assets/icons/footer/linkedin.png" alt="Linkedin">
+                    </a>
+                    <a href="#" class="footer__top-container__hotel__socials__link">
+                        <img class="footer__top-container__hotel__socials__link__icon"
+                            src="assets/icons/footer/youtube.png" alt="Youtube">
                     </a>
                 </div>
             </div>
