seccion menu desktop

--- a/index.html
+++ b/index.html
@@ -506,6 +506,9 @@
 
             <!-- Slider main container -->
             <div class="swiper food-list-swiper">
+                
+                <div class="swiper-button-prev">&lt;</div>
+                <div class="swiper-button-next">&gt;</div>
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                     <!-- Slides -->
@@ -518,9 +521,9 @@
                                     <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
                                         adip
                                         isicing elit, sed do eiusmod tempor.</p>
-                                    <img class="food__link__text-container__hidden-arrow"
-                                        src="assets/icons/home-page/menu/arrow.png" alt="">
-                                </div>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
                             </a>
                         </li>
                         <li class="food">
@@ -531,9 +534,9 @@
                                     <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
                                         adip
                                         isicing elit, sed do eiusmod tempor.</p>
-                                    <img class="food__link__text-container__hidden-arrow"
-                                        src="assets/icons/home-page/menu/arrow.png" alt="">
-                                </div>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
                             </a>
                         </li>
                         <li class="food">
@@ -544,9 +547,9 @@
                                     <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
                                         adip
                                         isicing elit, sed do eiusmod tempor.</p>
-                                    <img class="food__link__text-container__hidden-arrow"
-                                        src="assets/icons/home-page/menu/arrow.png" alt="">
-                                </div>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
                             </a>
                         </li>
                     </ul>
@@ -559,9 +562,9 @@
                                     <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
                                         adip
                                         isicing elit, sed do eiusmod tempor.</p>
-                                    <img class="food__link__text-container__hidden-arrow"
-                                        src="assets/icons/home-page/menu/arrow.png" alt="">
-                                </div>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
                             </a>
                         </li>
                         <li class="food">
@@ -572,9 +575,9 @@
                                     <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
                                         adip
                                         isicing elit, sed do eiusmod tempor.</p>
-                                    <img class="food__link__text-container__hidden-arrow"
-                                        src="assets/icons/home-page/menu/arrow.png" alt="">
-                                </div>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
                             </a>
                         </li>
                         <li class="food">
@@ -585,16 +588,97 @@
                                     <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
                                         adip
                                         isicing elit, sed do eiusmod tempor.</p>
-                                    <img class="food__link__text-container__hidden-arrow"
-                                        src="assets/icons/home-page/menu/arrow.png" alt="">
-                                </div>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="swiper-slide food-list">
+                        <li class="food">
+                            <a class="food__link" href="#">
+                                <img class="food__link__image" src="assets/images/placeholder-image.png" alt="">
+                                <div class="food__link__text-container">
+                                    <h3 class="food__link__text-container__title">Mac & Cheese</h3>
+                                    <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
+                                        adip
+                                        isicing elit, sed do eiusmod tempor.</p>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
+                            </a>
+                        </li>
+                        <li class="food">
+                            <a class="food__link" href="#">
+                                <img class="food__link__image" src="assets/images/placeholder-image.png" alt="">
+                                <div class="food__link__text-container">
+                                    <h3 class="food__link__text-container__title">Fish & Chips</h3>
+                                    <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
+                                        adip
+                                        isicing elit, sed do eiusmod tempor.</p>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
+                            </a>
+                        </li>
+                        <li class="food">
+                            <a class="food__link" href="#">
+                                <img class="food__link__image" src="assets/images/placeholder-image.png" alt="">
+                                <div class="food__link__text-container">
+                                    <h3 class="food__link__text-container__title">Peanut Butter & Jelly</h3>
+                                    <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
+                                        adip
+                                        isicing elit, sed do eiusmod tempor.</p>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="swiper-slide food-list">
+                        <li class="food">
+                            <a class="food__link" href="#">
+                                <img class="food__link__image" src="assets/images/placeholder-image.png" alt="">
+                                <div class="food__link__text-container">
+                                    <h3 class="food__link__text-container__title">Tacos</h3>
+                                    <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
+                                        adip
+                                        isicing elit, sed do eiusmod tempor.</p>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
+                            </a>
+                        </li>
+                        <li class="food">
+                            <a class="food__link" href="#">
+                                <img class="food__link__image" src="assets/images/placeholder-image.png" alt="">
+                                <div class="food__link__text-container">
+                                    <h3 class="food__link__text-container__title">Sushi</h3>
+                                    <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
+                                        adip
+                                        isicing elit, sed do eiusmod tempor.</p>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
+                            </a>
+                        </li>
+                        <li class="food">
+                            <a class="food__link" href="#">
+                                <img class="food__link__image" src="assets/images/placeholder-image.png" alt="">
+                                <div class="food__link__text-container">
+                                    <h3 class="food__link__text-container__title">Hotdog</h3>
+                                    <p class="food__link__text-container__text">Lorem ipsum dolor sit amet, consectetur
+                                        adip
+                                        isicing elit, sed do eiusmod tempor.</p>
+                                    </div>
+                                <img class="food__link__hidden-arrow"
+                                    src="assets/icons/home-page/menu/arrow.png" alt="">
                             </a>
                         </li>
                     </ul>
                 </div>
 
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+                
             </div>
 
         </section>
