pagina about desktop

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         </section>
 
         <section class="about">
-            <iframe class="about__video" width="560" height="315"
+            <iframe class="about__video"
                 src="https://www.youtube.com/embed/Bu3Doe45lcU?si=C1JsdFb_5tVdT1w0&amp;start=25&end=75"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
