estilos desktop room details

--- a/room-details.html
+++ b/room-details.html
@@ -269,6 +269,7 @@
                                 <p class="related-rooms__description__price">
                                     $345<span class="related-rooms__description__price__per-night">/Night</span>
                                 </p>
+                                <a href="room-details.html" class="related-rooms__description__book-button">Booking Now</a>
                             </div>
                         </div>
                         <div class="swiper-slide related-rooms">
@@ -316,6 +317,7 @@
                                 <p class="related-rooms__description__price">
                                     $345<span class="related-rooms__description__price__per-night">/Night</span>
                                 </p>
+                                <a href="room-details.html" class="rooms__grid-container__room__book-button">Booking Now</a>
                             </div>
                         </div>
                         <div class="swiper-slide related-rooms">
@@ -363,6 +365,7 @@
                                 <p class="related-rooms__description__price">
                                     $345<span class="related-rooms__description__price__per-night">/Night</span>
                                 </p>
+                                <a href="room-details.html" class="rooms__grid-container__room__book-button">Booking Now</a>
                             </div>
                         </div>
                     </div>
