--- a/offers.html
+++ b/offers.html
@@ -492,6 +492,7 @@
                             <p class="room__description__price">
                                 $345<span class="room__description__price__per-night">/Night</span>
                             </p>
+                            <a href="room-details.html" class="room__description__book-button">Booking Now</a>
                         </div>
                     </div>
                     <div class="swiper-slide room">
@@ -538,6 +539,7 @@
                             <p class="room__description__price">
                                 $345<span class="room__description__price__per-night">/Night</span>
                             </p>
+                            <a href="room-details.html" class="room__description__book-button">Booking Now</a>
                         </div>
                     </div>
                     <div class="swiper-slide room">
@@ -584,6 +586,7 @@
                             <p class="room__description__price">
                                 $345<span class="room__description__price__per-night">/Night</span>
                             </p>
+                            <a href="room-details.html" class="room__description__book-button">Booking Now</a>
                         </div>
                     </div>
                 </div>
